@@ -393,6 +393,7 @@ S3method(summary, hhh4)
 S3method(print, summary.hhh4)
 S3method(nobs, hhh4)
 S3method(logLik, hhh4)
+S3method(formula, hhh4)
 S3method(terms, hhh4)
 S3method(coef, hhh4)
 S3method(vcov, hhh4)
